trunk/Archive2/0d/ab594b3f2f7b7c/output
clang++
main.cpp:12:5: error: expected a class or namespace
int func_Test::f()
    ^
1 error generated.
g++
main.cpp:12:5: error: 'func_Test' is not a class, namespace, or enumeration
 int func_Test::f()
     ^
clang++ c++1y
main.cpp:12:5: error: expected a class or namespace
int func_Test::f()
    ^
1 error generated.
g++ c++1y
main.cpp:12:5: error: 'func_Test' is not a class, namespace, or enumeration
 int func_Test::f()
     ^
